# TerminalSoftwareRasterizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: OBJ_Loader.h  img.h  rgb.h  vec.h
src/: img.cpp  main.cpp
